--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -42,15 +42,15 @@
             <li><a href="/request-param-v3?username=hello&age=20">요청 파라미터 v3</a></li>
             <li><a href="/request-param-v4?username=hello&age=20">요청 파라미터 v4</a></li>
             <li><a href="/request-param-required?username=hello&age=20">요청 파라미터 필수</a></li>
-            기본 값
-    <li><a href="/request-param-default?username=hello&age=20">요청 파라미터</a></li>
-        <li><a href="/request-param-map?username=hello&age=20">요청 파라미터 MAP</a></li>
-        <li><a href="/model-attribute-v1?username=hello&age=20">요청 파라미터
-            @ModelAttribute v1</a></li>
-        <li><a href="/model-attribute-v2?username=hello&age=20">요청 파라미터
-            @ModelAttribute v2</a></li>
-</ul>
-</li>
+
+            <li><a href="/request-param-default?username=hello&age=20">기본 값 요청 파라미터</a></li>
+            <li><a href="/request-param-map?username=hello&age=20">요청 파라미터 MAP</a></li>
+            <li><a href="/model-attribute-v1?username=hello&age=20">요청 파라미터
+                @ModelAttribute v1</a></li>
+            <li><a href="/model-attribute-v2?username=hello&age=20">요청 파라미터
+                @ModelAttribute v2</a></li>
+        </ul>
+    </li>
 <li>HTTP 요청 메시지
     <ul>
         <li>POST MAN</li>
